# ObjectDetectorML

./: BLIND_NAVIGATION_README.md  ENHANCEMENT_SUMMARY.md  README.md  blind_navigation_assistant.py  debug_detection.py  demo.py  detailed_debug.py  enhanced_demo.py  main.py  models.py  pyproject.toml  run_with_simulated_camera.py  run_with_webcam.py  simple_camera_test.py  test_camera.py  test_navigation.py  test_system.py  utils.py
camera/: __init__.py  camera_interface.py  opencv_camera.py
color/: __init__.py  color_analyzer_interface.py  hsv_color_analyzer.py
config/: __init__.py  color_config.yaml  config_manager.py  detection_config.yaml  navigation_config.yaml
detection/: __init__.py  contour_detector.py  detector_interface.py
mobile_app/: README.md  start_system.bat  start_system.sh
mobile_app/flutter_app/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
mobile_app/flutter_app/.dart_tool/: package_config.json  package_config_subset
mobile_app/flutter_app/.dart_tool/extension_discovery/: vs_code.json
mobile_app/flutter_app/android/: local.properties
mobile_app/flutter_app/android/app/: build.gradle
mobile_app/flutter_app/lib/: main.dart
mobile_app/python_backend/: requirements.txt
mobile_app/python_backend/api/: main.py
mobile_app/python_backend/models/: response_models.py
mobile_app/python_backend/vision/: face_detection.py  gesture_recognition.py  hand_tracking.py  object_detection.py
processing/: __init__.py  image_processor.py
shape/: __init__.py  geometric_shape_analyzer.py  shape_analyzer_interface.py
(+10 files in other folders)
