[tool.poetry]
name = "object-detector"
version = "0.0.1"
description = "sample object detector using opencv and python"
authors = ["Julius_mutugu <ndegwajulius239@gmail.com>"]
license = "Juliunz"
readme = "README.md"
packages = [{include = "object_detector", from = "."}]

[tool.poetry.dependencies]
python = "^3.13"
opencv-python = "^4.8.0"
numpy = "^1.24.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
